attempt to fix carousel photo out of align by using margin: 0 auto

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -54,6 +54,10 @@ body {
   align-text: right;	
 }
 
+#active-carousel-img {
+  margin: 0 auto;
+}
+
 
 .fix-margin {margin: 0 auto}
 
